--- a/package.json
+++ b/package.json
@@ -8,20 +8,14 @@
 		"@testing-library/react": "^11.2.6",
 		"@testing-library/user-event": "^12.8.3",
 		"classnames": "^2.3.1",
-		"rc-queue-anim": "^1.8.5",
+		"prop-types": "^15.7.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-flip-toolkit": "^7.0.13",
-		"react-parallax": "^3.3.0",
-		"react-reveal": "^1.2.2",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
-		"react-spring": "^9.1.2",
-		"react-use-scroll-snap": "^0.0.1",
+		"react-transition-group": "^4.4.1",
 		"sass": "^1.32.12",
-		"slugify": "^1.5.1",
-		"tailwindcss-scroll-snap": "^1.1.0",
-		"web-vitals": "^1.1.1"
+		"slugify": "^1.5.1"
 	},
 	"scripts": {
 		"start": "craco start",
